# dog_2021

./: README.md
new_dog/: test_cpuvel.py
new_dog/UserInterface/: CMakeLists.txt  mainpage.dox  package.xml
new_dog/UserInterface/src/: main.cpp  main_window.cpp  qnode.cpp
new_dog/communication/: CMakeLists.txt  package.xml
new_dog/communication/launch/: dog_communication.launch  world.launch
new_dog/communication/src/: communication_node.py  my_packet.py  param_logging.py  serialcommunication.py
new_dog/dog_sim/: CMakeLists.txt  package.xml  urdf.rviz  vennue.world  wo.world
new_dog/dog_sim/config/: joint_names_big_dog.SLDASM _version100.yaml  joint_names_big_dog.SLDASM.yaml  无标题文档
new_dog/dog_sim/include/: base_controller.h  pid.h  sensors_information.h
new_dog/dog_sim/launch/: ISCAS.world  display.launch  empty.world  empty_world.launch  gazebo.launch  gazebo_ISCAS.launch  gazebo_test.launch  gazebo_vennue.launch  test.launch
new_dog/dog_sim/launch/dog_world/: empty.world
new_dog/dog_sim/launch/dog_world/vennue/: model.sdf
new_dog/dog_sim/meshes/: body.STL  left_back_part_A.STL  left_back_part_B.STL  left_back_part_C.STL  left_front_part_A.STL  left_front_part_B.STL  left_front_part_C.STL  right_back_part_A.STL  right_back_part_B.STL  right_back_part_C.STL  right_front_part_A.STL  right_front_part_B.STL  right_front_part_C.STL
new_dog/dog_sim/src/: base_controller.cpp  control.cpp  param_logging.py  pid.cpp  sensors_information.cpp
new_dog/dog_sim/urdf/: big_dog.SLDASM.csv  big_dog.SLDASM.urdf  big_dog_fixed.SLDASM.urdf  world.urdf
new_dog/dog_slam/: CMakeLists.txt  package.xml  robot_gmapping.launch.xml
new_dog/joystick/: CMakeLists.txt  joystick.py  package.xml  test_joystick.py
new_dog/joystick/launch/: joy_stick.launch  key_board.launch
new_dog/leg_controller/: CMakeLists.txt  package.xml
new_dog/leg_controller/src/: leg_controller.cpp  leg_controller.h  leg_controller.py  leg_dynamic.cpp  leg_dynamic.h  leg_dynamics.py  main.cpp
new_dog/locomotion_controller/: CMakeLists.txt  package.xml  readme.md
new_dog/locomotion_controller/launch/: locomotion.launch  locomotion_test.launch
new_dog/locomotion_controller/src/: QP_solver.py  action.py  dog_controller.cpp  dog_controller.h  dog_controller.py  gait_schedular.cpp  gait_schedular.h  gait_schedular.py  locomotion.cpp  locomotion_config.py  locomotion_controller.cpp  locomotion_controller.h  locomotion_controller.py  locomotion_controller_jkc.py  predictive_support_polygon.py  qp_controller.py  qp_mpc.py  qp_solver.cpp  qp_solver.h  state_estimate.py  state_machine.py
new_dog/main_controller/: CMakeLists.txt  package.xml
new_dog/main_controller/launch/: data_reader.launch  test_footsensor.launch
new_dog/main_controller/src/: Sensor.py  Serialport_data.py  npy_reader.py  statemechine.py  test_footsensor.py  test_footsensor.sh  test_main.py  test_main_PosWalk.py
new_dog/omega/omega/: Plot Name-big_dog:world_angular_velocity_x.csv  Plot Name-big_dog:world_angular_velocity_y.csv  Plot Name-big_dog:world_angular_velocity_z.csv  Plot Name-big_dog:world_pose_orientation_pitch.csv  Plot Name-big_dog:world_pose_orientation_roll.csv  Plot Name-big_dog:world_pose_orientation_yaw.csv
new_dog/state_estimation/: CMakeLists.txt  first_trydata  package.xml  secondtry
new_dog/state_estimation/datas/: Fri Jul  2 20:43:12 2021.csv  Fri Jul  2 20:45:25 2021.csv  Fri Jul  2 20:48:39 2021.csv  Fri Jul  2 21:08:30 2021.csv  Fri Jul  2 21:10:15 2021.csv  Fri Jul  2 21:16:38 2021.csv  Fri Jul  2 21:34:25 2021.csv  Fri Jul  2 21:43:19 2021.csv  Fri Jul  2 21:50:20 2021.csv  Fri Jul  2 21:55:46 2021.csv  Fri Jul  2 22:01:43 2021.csv  Fri Jul  2 22:08:40 2021.csv  Fri Jul  2 22:28:33 2021.csv  Fri Jul  2 22:43:36 2021.csv  Fri Jul  9 10:17:36 2021.csv  Fri Jul  9 10:24:19 2021.csv  Fri Jul  9 10:29:01 2021.csv  Fri Jul  9 10:34:05 2021.csv  Fri Jul  9 21:31:27 2021.csv  Fri Jul  9 21:46:08 2021.csv  Fri Jul  9 22:07:08 2021.csv  Fri Jul 23 09:20:00 2021.csv  Fri Jul 23 09:25:48 2021.csv  Fri Jul 23 09:31:17 2021.csv  Fri Mar 26 18:15:54 2021.csv  Fri Mar 26 18:16:26 2021.csv  Fri Mar 26 18:16:49 2021.csv  Fri Mar 26 18:17:12 2021.csv  Fri Mar 26 18:18:00 2021.csv  Fri Mar 26 18:18:33 2021.csv  Fri Mar 26 18:20:35 2021.csv  Fri Mar 26 18:22:43 2021.csv  Fri Mar 26 18:25:42 2021.csv  Fri Mar 26 18:26:15 2021.csv  (+726 more)
new_dog/stm32_Communication/: CMakeLists.txt  package.xml  stm32_Communication.launch
(+15 files in other folders)
