<package format="2">
  <name>leg_controller</name>
  <version>1.0.0</version>
  <description>
    <p>for maincontroll of the dog</p>
    <p>This package contains configuration data, 3D models and launch files
for big_dog robot</p>
  </description>
  <author>MRY</author>
  <maintainer email="2710375534@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>message_runtime</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_controller</depend>
  <depend>gazebo</depend>



  <export>
    <architecture_independent />
  </export>
</package>
